# AGI-LearnProject

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
0_base_python/: 1-Python基础速览.ipynb  Pydantic examples.py  hello_python.py
0_base_python_tool/: README.md
0_base_数学/: README.md
0_base_数据结构/: 列表.ipynb  链表.py
1_ML_机器学习/: README.md
2_Agents/: Qwen_Demo.py  demo1.py
2_Agents/Agentic_M2_UGL/: M2_UGL_1.ipynb  demo.py  utils.py
2_Agents/LangChain快速入门/: Hello_LangChain.ipynb  Qwen-link.ipynb  Qwen_pin.py  get_weather.py
2_PE/: README.md
3_算法与机器学习导论/: README.md
Hello Agents/: demo1.py
Python/: hello_python.py  main.py  python_list.py
