[project]
name = "pythonlearnproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
reamde = "README.md"
dependencies = [
    "google-genai>=1.55.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.14",
    "tensorflow>=2.20.0",
]
