[project]
name = "pythonlearnproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
reamde = "README.md"
dependencies = [
    "google-genai>=1.56.0",
    "jupyterlab>=4.5.1",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.17",
    "tensorflow>=2.20.0",
]
